--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -8,9 +8,29 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".MainActivity" >
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/hello_world" />
+	<ScrollView
+	    android:layout_width="fill_parent"
+	    android:layout_height="fill_parent">
+
+	    <LinearLayout
+	        android:orientation="vertical"
+	        android:layout_width="fill_parent"
+	        android:layout_height="fill_parent">
+
+	        <EditText
+	            android:id="@+id/editText"
+	            android:layout_width="fill_parent"
+	            android:layout_height="wrap_content"
+	            android:cursorVisible="false"
+	            android:editable="false"/>
+
+	        <TextView
+	            android:id="@+id/logText"
+	            android:layout_width="fill_parent"
+	            android:layout_height="wrap_content"
+	            android:minHeight="300dp"/>
+		</LinearLayout>
+	</ScrollView>
+
 
 </RelativeLayout>
