--- a/res/layout/activity_light.xml
+++ b/res/layout/activity_light.xml
@@ -6,9 +6,9 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".GyroscopeActivity" >
+    tools:context=".LightActivity" >
 
-	
+
 	<TextView
 	    android:id="@+id/titleText"
 	    android:layout_width="fill_parent"
