--- a/res/layout/activity_location.xml
+++ b/res/layout/activity_location.xml
@@ -6,9 +6,9 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".GyroscopeActivity" >
+    tools:context=".LocationActivity" >
 
-	
+
 	<TextView
 	    android:id="@+id/titleText"
 	    android:layout_width="fill_parent"
@@ -21,5 +21,12 @@
 	    android:layout_height="wrap_content"
 	    android:layout_below="@+id/titleText" 
 	    android:textSize="12dip"/>
+	
+	<TextView 
+	    android:id="@+id/logText"
+	    android:layout_width="fill_parent"
+	    android:layout_height="wrap_content" 
+	    android:layout_below="@+id/contentText"
+	    android:textSize="12dip" />
 
 </RelativeLayout>
