--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -8,7 +8,35 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".MainActivity" >
 
+	<TextView
+	    android:id="@+id/sensorNameText"  
+		android:layout_width="fill_parent"
+		android:layout_height="wrap_content"
+		android:textSize="15dip"/> 
+        
+    <TextView 
+        android:id="@+id/sensorTypeText"  
+        android:layout_width="wrap_content" 
+        android:layout_height="wrap_content"  
+        android:layout_below="@+id/sensorNameText" 
+        android:textSize="12dip" />  
 
+    <TextView 
+        android:id="@+id/sensorVendorText"  
+        android:layout_width="wrap_content" 
+        android:layout_height="wrap_content"  
+        android:layout_below="@+id/sensorNameText" 
+        android:layout_toRightOf="@+id/sensorTypeText"  
+        android:textSize="12dip" 
+        android:paddingLeft="12dip" />  
 
-
+	<TextView 
+	    android:id="@+id/sensorVersionText"  
+        android:layout_width="wrap_content" 
+        android:layout_height="wrap_content"  
+        android:layout_below="@+id/sensorNameText" 
+        android:layout_toRightOf="@+id/sensorVendorText"  
+        android:textSize="12dip"
+        android:paddingLeft="12dip" />  
+    
 </RelativeLayout>
