Finish the accelerometer sensor

--- a/res/layout/activity_accelerometer.xml
+++ b/res/layout/activity_accelerometer.xml
@@ -16,10 +16,31 @@
 	    android:textSize="15dip" />
 	
 	<TextView
-	    android:id="@+id/contentText"
+	    android:id="@+id/text_x"
 	    android:layout_width="fill_parent"
 	    android:layout_height="wrap_content"
 	    android:layout_below="@+id/titleText" 
 	    android:textSize="12dip"/>
 
+	<TextView
+	    android:id="@+id/text_y"
+	    android:layout_width="fill_parent"
+	    android:layout_height="wrap_content"
+	    android:layout_below="@+id/text_x" 
+	    android:textSize="12dip"/>
+	
+	<TextView
+	    android:id="@+id/text_z"
+	    android:layout_width="fill_parent"
+	    android:layout_height="wrap_content"
+	    android:layout_below="@+id/text_y" 
+	    android:textSize="12dip"/>
+	
+	<TextView
+	    android:id="@+id/text_speed"
+	    android:layout_width="fill_parent"
+	    android:layout_height="wrap_content"
+	    android:layout_below="@+id/text_z" 
+	    android:textSize="12dip"/>
+	
 </RelativeLayout>
